banner section modified

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav class="section-style nav-bar">
+        <nav class="hide section-style nav-bar">
             <div class="logo-sec"> <p>Influencer products</p></div>
             <div class="nav-item">
                 <ul>
@@ -23,16 +23,26 @@
             </div>
         </nav>
 
-        <section class="section-style banner">
+        <!-- <section class="section-style banner">
             <div class="banner-content"> 
                 <h1>Start your Journey as Influencer</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
                 <button class="btn-megenta">Preebook now <span><a href=""><i class="fa-solid fa-arrow-right"></i></a></span></button>
             </div>
             <div class="banner-img"><img src="images/main-camera.png" alt=""></div>
-        </section>
+        </section> -->
+        <section><div class="banner">
+            <div>
+                <h1>Start your Journey as Influencer</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <button class="btn-megenta">Preebook now <span><a href=""><i class="fa-solid fa-arrow-right"></i></a></span></button>
+            </div>
+            <div class="banner-img"><img src="images/main-camera.png" alt=""></div>
+        </div></section>
     </header>
-    <main>
+
+
+    <main class="hide">
         <div class="border-div">
             <svg xmlns="http://www.w3.org/2000/svg" width="1110" height="1" viewBox="0 0 1110 1" fill="none">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M1110 1H0V0H1110V1Z" fill="url(#paint0_linear_35_70)"/>
